Finished jobs at all, just going to add runningCluster field for each running job (each job will have Object of type Cluster)

--- a/frontend/src/pages/Jobs/Jobs.css
+++ b/frontend/src/pages/Jobs/Jobs.css
@@ -131,3 +131,11 @@ h1 {
     margin-right: 5px; /* Add space between icon and text */
     vertical-align: middle; /* Align icon with the text */
 }
+
+.test-status-succeeded {
+    color: green;
+}
+
+.test-status-failed {
+    color: red;
+}
