--- a/frontend/src/pages/Management/Management.css
+++ b/frontend/src/pages/Management/Management.css
@@ -189,3 +189,13 @@ button:hover {
         padding: 10px 15px;
     }
 }
+
+.separator {
+    margin: 20px 0; /* Adjust as needed */
+    border: none; /* Remove default border */
+    height: 2px; /* Height of the separator */
+    background-color: #ccc; /* Color of the separator */
+}
+
+
+
